@@ -34,3 +34,6 @@ Made string constant classes inherit from EL_ANY_SHARED
 Sat 10th Aug 2019, 14:07:13
 Made mirroring more efficient by only rendering the flipped image in EL_ROTATE_PICTURE_BUFFER
 
+Sun 11th Aug 2019, 11:57:07
+Added routine flip to class EL_DRAWABLE_PIXEL_BUFFER with or'd flip state
+
